--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "live-server": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-modal": "^3.5.1",
     "validator": "^10.7.0",
     "webpack": "^4.17.1",
     "webpack-dev-server": "^3.1.7"
