--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "live-server": "^1.2.0",
+    "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-modal": "^3.5.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
     "validator": "^10.7.0",
     "webpack": "^4.17.1",
     "webpack-dev-server": "^3.1.7"
